evals/gemini-2.5-flash-lite-qwen3/force-app/main/default/objects/Ingredient__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dairy</fullName>
                <default>true</default>
                <label>Dairy</label>
            </value>
            <value>
                <fullName>Extracts</fullName>
            </value>
            <value>
                <fullName>Fats/Oils</fullName>
            </value>
            <value>
                <fullName>Flour</fullName>
            </value>
            <value>
                <fullName>Fruits</fullName>
            </value>
            <value>
                <fullName>Leavening Agents</fullName>
            </value>
            <value>
                <fullName>Nuts</fullName>
            </value>
            <value>
                <fullName>Spices</fullName>
            </value>
            <value>
                <fullName>Sweeteners</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>