evals/gemini-2.5-flash-lite-qwen3/force-app/main/default/objects/Ingredient__c/fields/In_Stock__c.field-meta.xml
<CustomField>
    <fullName>In_Stock__c</fullName>
    <label>In Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>