evals/gemini-2.5-flash-lite-qwen3/force-app/main/default/objects/Ingredient__c/fields/On_Order__c.field-meta.xml
<CustomField>
    <fullName>On_Order__c</fullName>
    <label>On Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>